--- a/WebApiFinbeCore/WebApiFinbeCore/WebApiFinbeCore.csproj
+++ b/WebApiFinbeCore/WebApiFinbeCore/WebApiFinbeCore.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Attributes\MyHeaderFilter.cs" />
+    <Compile Include="Attributes\SwaggerHeaderAttribute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\CreditsController.cs" />
