--- a/WebApiFinbeCore/WebApiFinbeCore.Model/WebApiFinbeCore.Model.csproj
+++ b/WebApiFinbeCore/WebApiFinbeCore.Model/WebApiFinbeCore.Model.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Configuration.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="ExceptionUtils.cs" />
+    <Compile Include="ImpuestosAplicables.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Nomina.cs" />
     <Compile Include="Payment.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="ReferenciaContable.cs" />
     <Compile Include="Referencias360.cs" />
     <Compile Include="RefSuc.cs" />
+    <Compile Include="Sistemas.cs" />
     <Compile Include="Solicitud.cs" />
   </ItemGroup>
   <ItemGroup>
