SinReq Se agrega la integracion del procesamiento de solicitud imx

--- a/WebApiFinbeCore/WebApiFinbeCore/Web.config
+++ b/WebApiFinbeCore/WebApiFinbeCore/Web.config
@@ -22,12 +22,13 @@
     <add key="api360UserName" value="bsfbepensaadmin" />
     <add key="api360Password" value="MrAZq3h7" />
     <add key="codigoMoneda" value="MXN" />
-	<add key="SharePointURL" value="https://srvpbashare.mdaote.bepensa.local:444"/>
-	<add key="SPUser" value="admin_crmdes"/>
-	<add key="SPPassword" value="4dmin4120" />
-	<add key="SPDomain" value="mdaote" />
-	<add key="EmailSender" value="admin_crm@bepensa.com" />
-	<add key="EmailReceiver" value="juridicogf@bepensa.com" />
+    <add key="SharePointURL" value="https://srvpbashare.mdaote.bepensa.local:444" />
+    <add key="SPUser" value="admin_crmdes" />
+    <add key="SPPassword" value="4dmin4120" />
+    <add key="SPDomain" value="mdaote" />
+    <add key="EmailSender" value="admin_crm@bepensa.com" />
+    <add key="EmailReceiver" value="juridicogf@bepensa.com" />
+    <add key="API_FACT" value="https://apifacttest.abcleasing.com.mx:444/api"/>
   </appSettings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -37,7 +38,6 @@
         <httpRuntime targetFramework="4.5" />
       </system.Web>
   -->
-  
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime maxRequestLength="1048576" />
@@ -62,18 +62,6 @@
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
-      </dependentAssembly>
-      <dependentAssembly>
         <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
       </dependentAssembly>
@@ -85,41 +73,50 @@
         <assemblyIdentity name="Microsoft.Xrm.Sdk" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
-    <handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="1073741824" />
+      </requestFiltering>
+    </security>
+  <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers>
-	<security>
-		<requestFiltering>
-			<requestLimits maxAllowedContentLength="1073741824" />
-		</requestFiltering>
-	</security>
-  </system.webServer>
+    </handlers></system.webServer>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="WSHttpBinding_ISPFileUpload">
+          <security mode="Transport">
+            <transport clientCredentialType="None" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://srvpbashare.mdaote.bepensa.local/SPFileUpload.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISPFileUpload" contract="SPFileUpload.ISPFileUpload" name="WSHttpBinding_ISPFileUpload" />
+    </client>
+  </system.serviceModel>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-	<system.serviceModel>
-		<bindings>
-			<wsHttpBinding>
-				<binding name="WSHttpBinding_ISPFileUpload">
-					<security mode="Transport">
-						<transport clientCredentialType="None" />
-					</security>
-				</binding>
-			</wsHttpBinding>
-		</bindings>
-		<client>
-			<endpoint address="https://srvpbashare.mdaote.bepensa.local/SPFileUpload.svc"
-				binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ISPFileUpload"
-				contract="SPFileUpload.ISPFileUpload" name="WSHttpBinding_ISPFileUpload" />
-		</client>
-	</system.serviceModel>
 </configuration>
